--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -231,7 +231,7 @@ The parameters of this script are:
   * --help: Display help for the script
 
 = Use a custom pathway database =
-Although Gowinda will probably mostly be used to test for overrepresentation of genes in GO categories, it is also possible to use different databases. In this case it is only necessary to provide a custom association file like in the following example:
+Although Gowinda will probably mostly be used to test for overrepresentation of genes in GO categories, it is also possible to use different databases. In this case it is only necessary to provide a custom 'gene set' file like in the following example:
 {{{
 category_A    description of category A    gene1 gene2 gene3 gene4 gene5
 category_B    description of category B    gene1 gene6 gene7 gene8
