--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -147,10 +147,12 @@ We recommend this mode when SNPs are in linkage equilibrium. Gowinda randomly sa
 === FDR correction ===
 We used the empirical FDR correction described in 'Elements of Statistical Learning' (2009): Trevor Hastie, Robert Tibshirani and Jerome Friedman, 2nd edition, pp687-690, (http://www-stat.stanford.edu/~tibs/ElemStatLearn/)
 
-In detail an empirical FDR is calculated in Gowinda accoding the following equations:
+In detail, Gowinda implements the following algorithm for calculating the FDR:
+Let G be the number of gene sets and S the number of simulations. Than an observed (Robs) and an expected (Rexp) count of gene sets having p-values smaller or equal than a threshold (the p-value for which FDR correction should be calculated) can be computed. The FDR can subsequently simply be calculated by dividing Rexp by Robs. 
 
 
 http://gowinda.googlecode.com/files/fdr_equations.png
+
 
 === SNP to gene mapping ===
 SNP to gene mapping refers to the assignment of genes to SNPs. For example it is possible to associate only genes where an exon is overlapping with a SNP or as another example, when regulatory regions should be considered, a SNP may be considered as associated with a gene when it's position is less than 500 bp upstream of the gene. Gowinda only reads the `.gtf` features `exon` and `cds`, all other features are ignored. The following features are thus internally derived from the annotation `exon` and `cds`:
