Edited wiki page Tutorial through web user interface.

--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -109,7 +109,7 @@ The output should be similar to the following:
 This converted annotation has the `FBgn` gene IDs whereas the GO association file has the `CG` gene IDs. It is thus necessary to obtain a different GO association file. Most conveniently such a GO association file can be directly obtained from !FuncAssociate2 (http://llama.mshri.on.ca/funcassociate/download_go_associations). However if many genes in the association file have an unmatched entry in the annotation, or vice versa, we recommend to obtain the GO association file from !GoMiner (see following tutorial):
 
 = Obtain a GO association file from !GoMiner =
-Usually we recommend to obtain a GO association file from !FuncAssociate2. However in some cases it may be advantageous to obtain this file from !GoMiner instead. We recommend to obtain an GO association from !GoMiner when you have many unmatched gene IDs, between the annotation and the GO association file (the log of Gowinda contains information about the number of matching gene IDs). !GoMiner uses a database of synonymous gene IDs and this can be utilized to produce a GO association file suitable for Gowinda. However, !GoMiner does not directly offer such a download, therefore we have to perform a query for GO term enrichment and subsequently extract the GO association file from the results.
+Usually we recommend to obtain a GO association file from !FuncAssociate2. However in some cases it may be advantageous to obtain this file from !GoMiner instead. We recommend to obtain an GO association file from !GoMiner when you have many unmatched gene IDs, between the annotation and the GO association file (the log of Gowinda contains information about the number of matching gene IDs). !GoMiner uses a database of synonymous gene IDs and this can be utilized to produce a GO association file suitable for Gowinda. However, !GoMiner does not directly offer such a download, therefore we have to perform a 'fake' query for GO term enrichment and subsequently extract the GO association file from the results.
 
 First we need a unique set of the gene IDs (using the `converted.gtf` file from the previous tutorial)
 {{{
