--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -133,7 +133,7 @@ Gowinda has the following input parameters
   * `--help`: show the help for Gowinda; Optional parameter
 
 === SNP to gene mapping ===
-SNP to gene mapping refers to the assignment of genes to SNPs. For example it is possible to associate only genes where an exon is overlapping with a SNP or as another example, when regulatory regions should be considered, a SNP may be considered as associated with a gene when it's position is less than 500 bp upstream of the gene. Gowinda only reads the `.gtf` features `exon` and `cds`, all other features are ignored. The following features are thus internally derived from the annotation `exon` and `cds`:
+SNP to gene mapping refers to the assignment of genes to SNPs. For example it is possible to associate only genes with a SNP, when an exon is overlapping with the SNP. As another example - when regulatory regions should be considered - a SNP may be considered as associated with a gene when it's position is less than 500 bp upstream of the gene. Gowinda only loads the `.gtf` features `exon` and `cds`, all other features are ignored. The following features are thus internally computed from the features `exon` and `cds`:
   * `exon`: SNPs within exons are associated with genes
   * `cds`: SNPs within CDS are associated with genes
   * `utr`: SNPs within 5'-UTR and 3'-UTR are associated with genes. Caluclated as `exon - cds`
