--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -174,7 +174,7 @@ We generally recommend this mode.
 
 === Calculate the p-value for a single gene set ===
 
-Dependent on the analysis mode (see above) Gowinda derives an empirical null distribution of gene abundance for every gene set after the simulations have been completed. An example of such an empirical null distribution for a single gene set and 1 million simulations may look like in the following example:
+After the simulations have been completed, Gowinda derives an empirical null distribution of gene abundance for every gene set. An example of such an empirical null distribution for a single gene set and 1 million simulations may look like in the following example:
 
 http://gowinda.googlecode.com/files/gowinda_edist.png
 
@@ -183,7 +183,7 @@ Let the number of simulations be `S`, the gene set for which the p-value should 
 
 http://gowinda.googlecode.com/files/equation_pvalue.png
 
-In the example shown above c^g^,,cand,, would be 18 genes, `S` would be 1 million simulations and the sum of c^g^,,s,, larger or equal than c^g^,,cand,, about 47.000 simulations. Thus the p-value p^g^ would be 47.000/1.000.000 = 0.047
+In the example shown above c^g^,,cand,, would be 18 genes, `S` would be 1 million simulations and the sum of c^g^,,s,, larger or equal than 18 (c^g^,,cand,,) about 47.000 simulations. Thus the p-value p^g^ would be 47.000/1.000.000 = 0.047
 
 
 
