--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -172,19 +172,19 @@ Gowinda randomly samples SNPs until the corresponding number of genes is identic
 We generally recommend this mode.
 
 
-=== Calculate the p-value for a single gene set ===
+=== Calculate the p-value of gene set enrichment ===
 
 After the simulations have been completed, Gowinda derives an empirical null distribution of gene abundance for every gene set. An example of such an empirical null distribution for a single gene set and 1 million simulations may look like in the following example:
 
 http://gowinda.googlecode.com/files/gowinda_edist.png
 
-Let the number of simulations be `S`, the gene set for which the p-value should be calculated be `g`, the number of genes found in a single simulation be c^g^,,s,, and the number of candidate genes be c^g^,,cand,, than the p-value of enrichment (p^g^) for a single gene set can be calculated according to the following equation:
-
+Let the number of simulations be `S`, the gene set for which the p-value should be calculated be `g`, the number of genes found for the given gene set within a single simulation be c^g^,,s,, and the number of candidate genes be c^g^,,cand,, than the p-value of enrichment (p^g^) for the given gene set can be calculated according to the following equation:
 
 http://gowinda.googlecode.com/files/equation_pvalue.png
 
 In the example shown above c^g^,,cand,, would be 18 genes, `S` would be 1 million simulations and the sum of c^g^,,s,, larger or equal than 18 (c^g^,,cand,,) about 47.000 simulations. Thus the p-value p^g^ for `intracellular protein transport` would be 47.000/1.000.000 = 0.047
 
+This p-value is calculated for ever gene set.
 
 
 
