--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -182,9 +182,9 @@ Let the number of simulations be `S`, the gene set for which the p-value should 
 
 http://gowinda.googlecode.com/files/equation_pvalue.png
 
-In the example shown above c^g^,,cand,, would be 18 genes, `S` would be 1 million simulations and the sum of c^g^,,s,, larger or equal than 18 (c^g^,,cand,,) about 47.000 simulations. Thus the p-value p^g^ for `intracellular protein transport` would be 47.000/1.000.000 = 0.047
+In the example shown above c^g^,,cand,, would be 18 genes, `S` would be 1 million simulations and the sum of c^g^,,s,, larger or equal than 18 (c^g^,,cand,,) about 47.000. Thus the p-value p^g^ for `intracellular protein transport` would be 47.000/1.000.000 = 0.047
 
-This p-value is calculated for ever gene set.
+This p-value is calculated for every gene set.
 
 
 
